kubernetes/apps/talos1018/spoolman/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spoolman-http
  labels:
    app.kubernetes.io/name: spoolman
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: spoolman
