kubernetes/apps/talos1018/spoolman/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spoolman
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: sh-spoolman
    gethomepage.dev/name: Spoolman
    gethomepage.dev/app: spoolman
    gethomepage.dev/widget.type: spoolman
    gethomepage.dev/widget.url: http://spoolman-http.spoolman.svc.cluster.local:8000
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https-internal
  hostnames:
    - "spoolman.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000
      backendRefs:
        - name: oauth2-proxy
          port: 4180
