kubernetes/apps/talos1018/spoolman/app/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-spoolman
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Main
    gethomepage.dev/icon: sh-spoolman.svg
    gethomepage.dev/name: Spoolman
    gethomepage.dev/app: spoolman
    gethomepage.dev/widget.type: spoolman
    gethomepage.dev/widget.url: http://spoolman-http.spoolman.svc.cluster.local:8000
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - spoolman.${CLUSTER_DOMAIN}
      secretName: spoolman-tls
  rules:
    - host: spoolman.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spoolman-http
                port:
                  number: 8000
